...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_types"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:longClickable="true"
            app:layoutManager="LinearLayoutManager" />

...
